# Faceless

./: .gitignore  README.md  enhanced_face_data.pkl  face_data.pkl  faceless.py  pyproject.toml  requirements.txt
data/: face_data.pkl
docs/: README.md
src/faceless/: __init__.py  main.py
src/faceless/modules/: __init__.py  module_a.py
tests/: __init__.py  test_main.py
